terraform-basic/security_groups.tf
resource "aws_security_group" "lab-security-group" {
	name        = "lab-security-group"
  	description = "Allow SSH HTTP "
	 vpc_id      = aws_vpc.lab-vpc.id

	ingress {
			description      = "SSH"
			from_port        = 22
			to_port          = 22
			protocol         = "tcp"
			cidr_blocks      = ["0.0.0.0/0"]						
	 }
	ingress {
			description      = "HTTP"
			from_port        = 80
			to_port          = 80
			protocol         = "tcp"
			cidr_blocks      = ["0.0.0.0/0"]						
	}

	egress {
			from_port        = 0
			to_port          = 0
			protocol         = "-1"
			cidr_blocks      = ["0.0.0.0/0"]
			ipv6_cidr_blocks = ["::/0"]
		  }

	 tags = {
		Name = "lab"
	  }
}
